[package]
name = "effward-dev"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.4"
actix-files = "0.6.2"
actix-session = { version = "0.7.2", features = ["redis-rs-session", "redis-rs-tls-session"] }
actix-web = "4"
actix-web-flash-messages = { version = "0.4.2", features = ["cookies"] }
actix-web-lab = "0.19.1"
anyhow = "1.0.71"
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15.0"
email_address = "0.2.4"
env_logger = "0.10.0"
futures = "0.3.28"
hex = "0.4.3"
hex-literal = "0.4.1"
html-escape = "0.2.13"
log = "0.4.19"
mysql = "*"
pbkdf2 = { version = "0.12", features = ["simple"] }
rand_core = { version = "0.6", features = ["std"] }
secrecy = { version = "0.8", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.97"
sha2 = "0.10"
sha256 = "1.1.4"
shortguid = "0.5.0"
sqlx = { version = "0.6", features = [ "runtime-actix-native-tls", "mysql", "chrono", "uuid" ] }
strum = "0.25.0"
strum_macros = "0.25.0"
tera = "1"
thiserror = "1.0.40"
url = "2.4.0"

[dependencies.uuid]
version = "1.3.4"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
    "serde",             # Enable serialization with serde
]
